# RAG-Evaluation

./: README.md  add_video_chunk_hugging_face.py  create_question_and_answer_dataset.py  dataset_creation_using_transcript.py  dataset_creation_using_transcript_with_titles.py  evaluation_dataset_from_hugging_face_q&a_datasets.py  evaluation_dataset_from_singleTurnSamples.py  evaluation_matrics.py  knowledge_graph.json  polish_the_created_dataset.py  pyproject.toml  ragas_context_metrics_polished.csv  ragas_testset.csv  ranking_genarated_datasets.py  ranking_genarated_datasets_and_edit_dataset.py  testset_generation_for_rag.py  upload_csv.py  youtube_qa_testset.csv
.deepeval/: .deepeval_telemetry.txt
DeepEval/: create_question_and_answer_dataset_pdf.py  create_question_and_answer_dataset_youtube.py  deepeval_pdf_testset.csv
RAGAs/: checkpoint_polished_dataset.csv  create_question_and_answer_dataset.py  create_question_and_answer_dataset_with_ragas.py  dataset_creation_using_pdf.py  dataset_creation_using_transcript.py  evaluation_dataset_from_hugging_face_datasets.py  evaluation_matrics_for_genarated_dataset.py  pdf_knowledge_graph.json  pdf_qa_testset.csv  polished_qa_dataset.csv  ragas_context_metrics_evaluation.csv  ragas_context_metrics_synced_polished.csv  youtube_knowledge_graph.json  youtube_qa_testset.csv
notebook/: giskard.ipynb
